hard-gists/de22705b5f7ef778806b/run.log
=== Docker Run Log for de22705b5f7ef778806b ===
Started at: Mi 29. Okt 20:35:17 CET 2025

[2025-10-29 20:35:17] START: Running container for de22705b5f7ef778806b
[2025-10-29 20:35:18] SUCCESS: Container d904a18992a3b9570ecf3448f464794ee0e453591f44b03a0c4236cb6b76760a started for de22705b5f7ef778806b
=== Container logs for de22705b5f7ef778806b ===
  File "/snippet.py", line 11
    print x, 'finished'
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for de22705b5f7ef778806b ===
[2025-10-29 20:35:20] INFO: Container d904a18992a3b9570ecf3448f464794ee0e453591f44b03a0c4236cb6b76760a has stopped
